src/components/Navigation/Navigation.css
.navigation {
  margin: 0 0 0 4px;
}

.navigation__list {
  display: flex;
  align-items: center;
  list-style: none;
}

.navigation__item {
  display: flex;
  align-items: center;
}

.navigation__link {
  margin: 0 16px 0 0;
  color: #ffffff;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  text-decoration: none;
}

.navigation__icon {
  width: 16px;
  height: 16px;
  margin: 0 4px 0 0;
}

.navigation__button {
  width: 90px;
  height: 60px;
  margin: 0 20px 0 0;
  padding: 0;
  border: 2px solid #2f71e5;
  border-radius: 100px;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #2f71e5;
  font-size: 18px;
  line-height: 24px;
  font-family: 'Inter', sans-serif;
  font-weight: 500;
}

.navigation__link:hover {
  cursor: pointer;
  opacity: 60%;
  padding-bottom: 28px;
  border-bottom: 2px solid #ffffff;
}

.navigation__button:hover {
  cursor: pointer;
  background-color: #2f71e5;
  color: #ffffff;
}

@media (max-width: 768px) {
  .navigation__link {
    margin: 0 12px;
  }

  .navigation__button {
    width: 85px;
    height: 55px;
    margin: 0 16px;
    font-size: 16px;
    line-height: 20px;
  }
}

@media (max-width: 480px) {
  .navigation__icon {
    width: 12px;
    height: 12px;
    margin: 0 2px 0 0;
  }

  .navigation__link {
    margin: 0 6px;
    font-size: 13px;
    line-height: 18px;
  }

  .navigation__button {
    width: 75px;
    height: 50px;
    margin: 0 6px;
    padding: 8px;
    font-size: 13px;
    line-height: 18px;
  }
}

@media (max-width: 320px) {
  .navigation__link {
    margin: 0 4px;
    font-size: 12px;
  }

  .navigation__button {
    width: 70px;
    height: 45px;
    margin: 0 4px;
    font-size: 12px;
  }
}

